WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15209
Sometimes removing an iframe from the DOM does not remove its frame from the page
https://bugs.webkit.org/show_bug.cgi?id=15209
Summary
Sometimes removing an iframe from the DOM does not remove its frame from the ...
Geoffrey Garen
Reported
2007-09-13 15:49:51 PDT
Testcase coming.
Attachments
Reduction
(699 bytes, text/html)
2007-09-13 15:51 PDT
,
Geoffrey Garen
no flags
Details
Patch
(10.92 KB, patch)
2007-09-13 20:55 PDT
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch 2
(17.10 KB, patch)
2007-09-13 20:59 PDT
,
Geoffrey Garen
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2007-09-13 15:51:01 PDT
Created
attachment 16284
[details]
Reduction
Geoffrey Garen
Comment 2
2007-09-13 15:51:35 PDT
Noticed this while investigating
bug 14503
. It seems to be related.
Geoffrey Garen
Comment 3
2007-09-13 15:55:58 PDT
Happens on Windows and Mac.
Geoffrey Garen
Comment 4
2007-09-13 20:55:01 PDT
Created
attachment 16287
[details]
Patch I think this patch is a key to fixing
bug 14503
.
Geoffrey Garen
Comment 5
2007-09-13 20:59:15 PDT
Created
attachment 16288
[details]
Patch 2 Updated patch with correct layout test results.
Geoffrey Garen
Comment 6
2007-09-13 23:27:44 PDT
Comment on
attachment 16288
[details]
Patch 2 Adam Roben reviewed this.
Geoffrey Garen
Comment 7
2007-09-13 23:36:42 PDT
***
Bug 14503
has been marked as a duplicate of this bug. ***
Geoffrey Garen
Comment 8
2007-09-14 10:22:08 PDT
Committed revision 25563.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug