WebCore:

Reviewed by Adam Roben.

        Fixed http://bugs.webkit.org/show_bug.cgi?id=15209
        Sometimes removing an iframe from the DOM does not remove its frame
        from the page

        * loader/FrameLoader.cpp:
        (WebCore::FrameLoader::requestFrame): Use the contentFrame pointer
        directly instead of searching for a frame by the frame element's name,
        because the frame element's name may have changed. (Another reason to do
        this is that it's just plain more straight-forward and efficient.)

LayoutTests:

        Reviewed by Adam Roben.

        Layout test for http://bugs.webkit.org/show_bug.cgi?id=15209
        Sometimes removing an iframe from the DOM does not remove its frame
        from the page.

        * fast/frames/iframe-remove-after-id-change-expected.txt: Added.
        * fast/frames/iframe-remove-after-id-change.html: Added.

        Updated results in this test. New results indicate that the frame's
        contents are preserved between removal and reinsertion, which matches
        Firefox.

        * fast/frames/iframe-option-crash-expected.checksum:
        * fast/frames/iframe-option-crash-expected.png:
        * fast/frames/iframe-option-crash-expected.txt:
        * fast/frames/iframe-option-crash.xhtml:



Canonical link: https://commits.webkit.org/20026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25563 268f45cc-cd09-0410-ab3c-d52691b4dbfc