WebCore/loader/FrameLoader.cpp
@@ -420,7 +420,7 @@ bool FrameLoader::requestFrame(HTMLFrameOwnerElement* ownerElement, const String
     } else
         url = completeURL(urlString);
 
-    Frame* frame = m_frame->tree()->child(frameName);
+    Frame* frame = ownerElement->contentFrame();
     if (frame)
         frame->loader()->scheduleLocationChange(url.url(), m_outgoingReferrer, true, userGestureHint());
     else
